syntax = "proto3";


package store;

import "google/api/annotations.proto";

// Настройки для генерации Go кода.
option go_package = "proto-demo.store.v1";

message SaveRequest {
  string key = 1;
  string value = 2;
}

message SaveResponse {
  bool status = 1;
}


message ReadRequest {
  string key = 1;
}
message ReadResponse {
  string value = 1;
}


message ListRequest {

}
message ListResponse {
  string key = 1;
  string value = 2;
}

service Store {
  rpc Save(SaveRequest) returns (SaveResponse) {
    option (google.api.http) = {
      post: "/api/store/{key}"
      body: "*"
    };
  }

  rpc Read(ReadRequest) returns (ReadResponse) {
    option (google.api.http) = {
      get: "/api/store/{key}"
    };
  }

  rpc List(ListRequest) returns (stream ListResponse) {}
}